--- a/views/hydra.html
+++ b/views/hydra.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Terra</title>
+	<title>Hydra</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<style>
@@ -49,10 +49,9 @@
 
 <body>
 	<div id="info">
-		<p id="myList"></p>
-	</div>
-
-	<script src="terra.js"></script>
-	<script type="module" src="terra-app.js"></script>
-
+    </div>
 </body>
+
+
+<script src="hydra-synth.js"></script>
+<script src="hydra-app.js"></script>
